affyPara 1.1.7 (build 17. July 2008) - Parallelized partial loess normalization with permutation added - all Package building errors fixed - Package cleaning
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@32754 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,8 @@
 export(distributeFiles, removeDistributedFiles, 
 	splitAffyBatch, splitFileVector, splitMatrix, file.name,
 	bgCorrectPara,
-	normalizeAffyBatchQuantilesPara, normalizeAffyBatchInvariantsetPara, normalizeAffyBatchConstantPara, normalizeAffyBatchLoessPara, 
+	normalizeAffyBatchQuantilesPara, normalizeAffyBatchInvariantsetPara, normalizeAffyBatchConstantPara, 
+	normalizeAffyBatchLoessPara, normalizeAffyBatchLoessIterPara, 
 	computeExprSetPara,
 	preproPara, rmaPara,
 	mergeAffyBatches, combineMatrices
