small code improvements and bugfixes in distribute files (for multiporcessors)
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@34416 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
 export(distributeFiles, removeDistributedFiles, 
-	splitAffyBatch, splitFileVector, splitMatrix, file.name,
+	splitAffyBatch, splitFileVector, splitMatrix,
 	bgCorrectPara,
 	normalizeAffyBatchQuantilesPara, normalizeAffyBatchInvariantsetPara, normalizeAffyBatchConstantPara, 
 	normalizeAffyBatchLoessPara, normalizeAffyBatchLoessIterPara, 
@@ -7,3 +7,5 @@ export(distributeFiles, removeDistributedFiles,
 	preproPara, rmaPara,
 	mergeAffyBatches, combineMatrices
 )
+
+importClassesFrom("vsn", "vsnInput")
