--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: affyPara
-Version: 1.3.0
+Version: 1.3.1
 Title: Parallelized preprocessing methods for Affymetrix Oligonucleotide Arrays
-Date: 2008-10-08
+Date: 2008-10-23
 Author: Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>, Esmeralda Vicedo <e.vicedo@gmx.net>, Ulrich Mansmann <mansmann@ibe.med.uni-muenchen.de>
 Maintainer: Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
-Depends: R (>= 2.5.0), affy (>= 1.14.0), snow (>= 0.2-3), vsn (>= 3.6.0)
+Depends: R (>= 2.5.0), methods, affy (>= 1.20.0), snow (>= 0.2-3), vsn (>= 3.6.0)
 Enhances: affy
 Description: The package contains parallelized functions for exploratory oligonucleotide array analysis. The package is designed for large numbers of microarray data.
 biocViews: Microarray, Preprocessing
 Reference: M. Schmidberger, U. Mansmann; Parallelized preprocessing algorithms for high-density oligonucleotide array data; 22th International Parallel and Distributed Processing Symposium (IPDPS 2008), Proceedings, 14-18 April 2008, Miami, Florida, USA. IEEE 2008 (http://www.hicomb.org/papers/HICOMB2008-03.pdf)
 License: GPL version 3 or newer
-URL: http://ibe.web.med.uni-muenchen.de
+URL: http://www.ibe.med.uni-muenchen.de
