- vsnPara (incl. doku) added - affyPara now works on multiprocessor machines and mulicomputer systems correctly - a lot of code improvements especially in data distribution
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@34959 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ export(distributeFiles, removeDistributedFiles,
 	bgCorrectPara,
 	normalizeAffyBatchQuantilesPara, normalizeAffyBatchInvariantsetPara, normalizeAffyBatchConstantPara, 
 	normalizeAffyBatchLoessPara, normalizeAffyBatchLoessIterPara, 
-	justvsnPara,
+	vsn2Para, justvsnPara, vsnrmaPara,
 	computeExprSetPara,
 	preproPara, rmaPara,
 	mergeAffyBatches, combineMatrices,
