first Version of MAplotPara added
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@35029 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(distributeFiles, removeDistributedFiles,
 	computeExprSetPara,
 	preproPara, rmaPara,
 	mergeAffyBatches, combineMatrices,
-	boxplotPara
+	boxplotPara, MAplotPara
 )
 
 importClassesFrom("vsn", "vsnInput")
