New Namespace with makeCluster and stopCluster function
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@36117 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(distributeFiles, removeDistributedFiles,
 	computeExprSetPara,
 	preproPara, rmaPara,
 	mergeAffyBatches, combineMatrices,
-	boxplotPara, MAplotPara
+	boxplotPara, MAplotPara, MAplotSer,
+	makeCluster, stopCluster
 )
