--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
-export(distributeFiles, removeDistributedFiles, 
+export(distributeFiles, removeDistributedFiles,
+	read.affybatchPara,
 	splitAffyBatch, splitFileVector, splitMatrix,
 	bgCorrectPara,
 	normalizeAffyBatchQuantilesPara, normalizeAffyBatchInvariantsetPara, normalizeAffyBatchConstantPara, 
