- additional tool to boxplotPara added: bagplot - and qaSummary added
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@39764 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,6 @@ export(distributeFiles, removeDistributedFiles,
 	computeExprSetPara,
 	preproPara, rmaPara,
 	mergeAffyBatches, combineMatrices,
-	boxplotPara, MAplotPara, MAplotSer,
+	boxplotPara, MAplotPara, MAplotSer, summaryM1M2Para,
 	makeCluster, stopCluster
 )
