--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: affyPara
-Version: 1.7.3
+Version: 1.7.4
 Title: Parallelized preprocessing methods for Affymetrix Oligonucleotide Arrays
-Date: 2010-03-08
+Date: 2010-04-16
 Author: Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>, Esmeralda Vicedo <e.vicedo@gmx.net>, Ulrich Mansmann <mansmann@ibe.med.uni-muenchen.de>
-Maintainer: Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
+Maintainer: Markus Schmidberger <schmidberger@rostlab.org>
 Depends: R (>= 2.5.0), methods, affy (>= 1.20.0), snow (>= 0.2-3), vsn (>= 3.6.0), aplpack (>= 1.1.1)
 Suggests: affydata
 Enhances: affy
