--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Version: 1.13.0
 Title: Parallelized preprocessing methods for Affymetrix Oligonucleotide Arrays
 Date: 2011-03-18
 Author: Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>, Esmeralda Vicedo <e.vicedo@gmx.net>, Ulrich Mansmann <mansmann@ibe.med.uni-muenchen.de>
-Maintainer: Markus Schmidberger <schmidberger@rostlab.org>
+Maintainer: Markus Schmidberger <MSchmidberger@freenet.de>
 Depends: R (>= 2.5.0), methods, affy (>= 1.20.0), snow (>= 0.2-3), vsn (>= 3.6.0), aplpack (>= 1.1.1)
 Suggests: affydata
 Enhances: affy
